package models;

public class InstrumentoViento extends Instrumento{
    public InstrumentoViento(String codigo, float precio, int stock, String nombre, String material) {
        super(codigo, precio, stock, nombre, material);
    }


}
